5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1811_2565.log
== TEST (2019-06-06 19:34:46) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= 75):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < 75):
		repf = repf + 1
	i = i + 1
print(ap)
print(repn)
print(repf)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:38:37) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= h*(75/100)):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < h*(75/100)):
		repf = repf + 1
	i = i + 1
print(ap)
print(repn)
print(repf)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:40:09) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= h*(75/100)):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < h*(75/100)):
		repf = repf + 1
	i = i + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
		
-- EXECUTION TIME:
0.87537
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:

-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:

-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:40:10) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= h*(75/100)):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < h*(75/100)):
		repf = repf + 1
	i = i + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:40:12) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= h*(75/100)):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < h*(75/100)):
		repf = repf + 1
	i = i + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
		
-- EXECUTION TIME:
1.08937
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
digite o vetor medias: digite as presencas: digite a carga horaria:
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
digite o vetor medias: digite as presencas: digite a carga horaria:
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
digite o vetor medias: digite as presencas: digite a carga horaria:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:40:27) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
i = 0
ap = 0
repn = 0
repf = 0
while(i<size(medias)):
	if(medias[i] >= 5 and pres[i] >= h*(75/100)):
		ap = ap + 1
	if(medias[i] < 5):
		repn = repn + 1
	if(pres[i] < h*(75/100)):
		repf = repf + 1
	i = i + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
print(z)
		
-- EXECUTION TIME:
0.901851
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:34:45) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
ap = 0
repn = 0
repf = 0
for i,j in zip(medias, pres)
	if(i >= 5 and j >= h*(75/100)):
		ap = ap + 1
	if(i < 5):
		repn = repn + 1
	if(i < h*(75/100)):
		repf = repf + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf

-- ERROR:
File "XXXX", line 8
    for i,j in zip(medias, pres)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:34:55) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
ap = 0
repn = 0
repf = 0
for i,j in zip(medias, pres):
	if(i >= 5 and j >= h*(75/100)):
		ap = ap + 1
	if(i < 5):
		repn = repn + 1
	if(i < h*(75/100)):
		repf = repf + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:35:28) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
ap = 0
repn = 0
repf = 0
for i,j in zip(medias, pres):
	if(i >= 5 and j >= h*(75/100)):
		ap = ap + 1
	if(i < 5):
		repn = repn + 1
	if(i < h*(75/100)):
		repf = repf + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 00:37:48) 
-- CODE:
from numpy import *
medias = array(eval(input("digite o vetor medias: ")))
pres = array(eval(input("digite as presencas: ")))
h = int(input("digite a carga horaria: "))
ap = 0
repn = 0
repf = 0
for i,j in zip(medias, pres):
	if(i >= 5 and j >= h*(75/100)):
		ap = ap + 1
	if(i < 5):
		repn = repn + 1
	if(j < h*(75/100)):
		repf = repf + 1
z = zeros(3,dtype = int)
z[0] = ap
z[1] = repn
z[2] = repf
print(z)

-- EXECUTION TIME:
1.2035
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
